# container-app-example-python

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dev-requirements.in  dev-requirements.txt  dev.Dockerfile  docker-compose.yml  main.py  poetry.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  lint.yml
app/: test_main.py
