[tool.poetry]
name = "container-app-example-python"
version = "0.1.0"
description = ""
authors = ["whuwxl <whuwxl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
uvicorn = "^0.24.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
mypy = "^1.7.1"
ruff = "^0.1.8"

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"

[tool.ruff]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.pytest.ini_options]
addopts = "-ra --quiet --strict-config --strict-markers"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
